--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
         </header>
 
         <main>
-
+            <div class="sidebar">
+                <ul>
+                  <li><a href="Tutorial.html">Tutorial</a></li>
+                  <li><a href="Compiler.html">Compiler</a></li>
+                  <li><a href="Methods.html">Methods</a></li>
+                  <li><a href="Classes.html">Classes</a></li>
+                  <li><a href="File_Handling.html">File Handling</a></li>
+                  <li><a href="How_To.html">How To</a></li>
+                  <li><a href="Reference.html">Reference</a></li>
+                  <li><a href="Quiz.html">Quiz</a></li>
+                </ul>
+              </div>
             <h2>Welcome to LPL Mastery</h2>
             <p>Learn Java from beginner to advanced level with our comprehensive tutorials, examples, and Resources</p>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
