--- a/Service.html
+++ b/Service.html
@@ -17,7 +17,18 @@
             <p>Your Ultimate Resource for Java Programming</p>
         </header>
         <main>
-
+            <div class="sidebar">
+                <ul>
+                  <li><a href="tutorial.html">Tutorial</a></li>
+                  <li><a href="Compiler.html">Compiler</a></li>
+                  <li><a href="methods.html">Methods</a></li>
+                  <li><a href="classes.html">Classes</a></li>
+                  <li><a href="file_handling.html">File Handling</a></li>
+                  <li><a href="how_to.html">How To</a></li>
+                  <li><a href="reference.html">Reference</a></li>
+                  <li><a href="Quiz.html">Quiz</a></li>
+                </ul>
+              </div>
         </main>
         <footer>
             <div class="footer-container">
