--- a/Quiz.html
+++ b/Quiz.html
@@ -2,14 +2,41 @@
 <html>
     <head>
         <title>LPL Mastery</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="About.html">About</a></li>
+                    <li><a href="Service.html">Services</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
 
+                </ul>
+            </nav>
+            <h1>LPL Mastery</h1>
+            <p>Your Ultimate Resource for Java Programming</p>
         </header>
-        
+        <main>
+            <div class="sidebar">
+                <ul>
+                  <li><a href="tutorial.html">Tutorial</a></li>
+                  <li><a href="Compiler.html">Compiler</a></li>
+                  <li><a href="methods.html">Methods</a></li>
+                  <li><a href="classes.html">Classes</a></li>
+                  <li><a href="file_handling.html">File Handling</a></li>
+                  <li><a href="how_to.html">How To</a></li>
+                  <li><a href="reference.html">Reference</a></li>
+                  <li><a href="Quiz.html">Quiz</a></li>
+                </ul>
+              </div>
+        </main>
         <footer>
-
+            <div class="footer-container">
+                <div class="footer-left">
+                  <p>&copy; 2023 LPL Mastery. All rights reserved.</p>
+                </div>
         </footer>
     </body>
 </html>
