--- a/Contact.html
+++ b/Contact.html
@@ -11,7 +11,6 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Service.html">Service</a></li>
-
                 </ul>
             </nav>
             <h1>LPL Mastery</h1>
@@ -19,6 +18,18 @@
         </header>
         
         <main>
+            <div class="sidebar">
+                <ul>
+                  <li><a href="tutorial.html">Tutorial</a></li>
+                  <li><a href="Compiler.html">Compiler</a></li>
+                  <li><a href="methods.html">Methods</a></li>
+                  <li><a href="classes.html">Classes</a></li>
+                  <li><a href="file_handling.html">File Handling</a></li>
+                  <li><a href="how_to.html">How To</a></li>
+                  <li><a href="reference.html">Reference</a></li>
+                  <li><a href="Quiz.html">Quiz</a></li>
+                </ul>
+              </div>
             <section>
                 <h2>Contact Us</h2>
                 <form action="https://formsubmit.co/halconlance17@gmail.com" method="POST">
