--- a/About.html
+++ b/About.html
@@ -17,6 +17,18 @@
             <p>Your Ultimate Resource for Java Programming</p>
         </header>
         <main>
+            <div class="sidebar">
+                <ul>
+                  <li><a href="Tutorial.html">Tutorial</a></li>
+                  <li><a href="Compiler.html">Compiler</a></li>
+                  <li><a href="Methods.html">Methods</a></li>
+                  <li><a href="Classes.html">Classes</a></li>
+                  <li><a href="File_Handling.html">File Handling</a></li>
+                  <li><a href="How_To.html">How To</a></li>
+                  <li><a href="Reference.html">Reference</a></li>
+                  <li><a href="Quiz.html">Quiz</a></li>
+                </ul>
+              </div>
             <h2>About Us</h2>
             <p>Welcome to our Java programming website! We are dedicated to providing comprehensive resources and tools to help beginners Learn programming and empower experienced programmers to enhance their skills.</p>
             <p>Our mission is to make programming accessible to everyone who has a passion for learning. Whether you're a complete beginner or an experienced developer, our website offers a wide range of tutorials, examples, quizzes, and interactive features to support your learning journey.</p>
