--- a/Methods.html
+++ b/Methods.html
@@ -21,13 +21,13 @@
         <main>
             <div class="sidebar">
                 <ul>
-                  <li><a href="tutorial.html">Tutorial</a></li>
+                  <li><a href="Tutorial.html">Tutorial</a></li>
                   <li><a href="Compiler.html">Compiler</a></li>
-                  <li><a href="methods.html">Methods</a></li>
-                  <li><a href="classes.html">Classes</a></li>
-                  <li><a href="file_handling.html">File Handling</a></li>
-                  <li><a href="how_to.html">How To</a></li>
-                  <li><a href="reference.html">Reference</a></li>
+                  <li><a href="Methods.html">Methods</a></li>
+                  <li><a href="Classes.html">Classes</a></li>
+                  <li><a href="File_Handling.html">File Handling</a></li>
+                  <li><a href="How_To.html">How To</a></li>
+                  <li><a href="Reference.html">Reference</a></li>
                   <li><a href="Quiz.html">Quiz</a></li>
                 </ul>
               </div>
