--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>LPL Mastery</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
+    <body class="home">
         <header>
             <nav>
                 <ul>
