--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
         </header>
         
         <main>
-            <div class="sidebar">
+            <div class="top">
                 <ul>
                   <li><a href="Tutorial.html">Tutorial</a></li>
                   <li><a href="Compiler.html">Compiler</a></li>
