--- a/Compiler.html
+++ b/Compiler.html
@@ -37,7 +37,7 @@
     </header>
     <main>
 
-        <div class="sidebar">
+        <div class="top">
             <ul>
               <li><a href="Tutorial.html">Tutorial</a></li>
               <li><a href="Compiler.html">Compiler</a></li>
