--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
             <p>Your Ultimate Resource for Java Programming</p>
         </header>
         <main>
-            <div class="sidebar">
+            <div class="top">
                 <ul>
                   <li><a href="Tutorial.html">Tutorial</a></li>
                   <li><a href="Compiler.html">Compiler</a></li>
