--- a/Tutorial.html
+++ b/Tutorial.html
@@ -29,6 +29,7 @@
               </div><br><br>
               <div class="sidebar">
                 <ul>
+                  <li><b>CLASSES</b></li>
                   <li><a href="#java-intro">Java Intro</a></li>
                   <li><a href="#java-install">Java Install</a></li>
                   <li><a href="#lets-start">Let's Start</a></li>
