--- a/Compiler.html
+++ b/Compiler.html
@@ -64,6 +64,9 @@
       output.textContent = code;
     });
   </script>
+
+      <h2>What is a Compiler?</h2>
+      
   </main>
   <footer>
     <div class="footer-left">
