--- a/Tutorial.html
+++ b/Tutorial.html
@@ -33,6 +33,14 @@
                   <li><a href="#java-install">Java Install</a></li>
                   <li><a href="#lets-start">Let's Start</a></li>
                   <li><a href="#java-syntax">Java Syntax</a></li>
+                   <button class="dropdown-btn">Output
+                     <i class="fa fa-caret-down"></i>
+                   </button>
+                   <div class="dropdown-container">
+                    <a href="#">Print Text</a>
+                    <a href="#">Print Numbers</a>
+                    
+                   </div>
                 </ul>
               </div>
             <div class="content">
