--- a/Tutorial.html
+++ b/Tutorial.html
@@ -33,7 +33,7 @@
                   <li><a href="#java-install">Java Install</a></li>
                   <li><a href="#lets-start">Let's Start</a></li>
                   <li><a href="#java-syntax">Java Syntax</a></li>
-                   <button class="dropdown-btn">Output
+                   <button class="dropdown-btn">Java Output
                      <i class="fa fa-caret-down"></i>
                    </button>
                    <div class="dropdown-container">
