--- a/Tutorial.html
+++ b/Tutorial.html
@@ -33,9 +33,9 @@
                   <li><a href="#java-install">Java Install</a></li>
                   <li><a href="#lets-start">Let's Start</a></li>
                   <li><a href="#java-syntax">Java Syntax</a></li>
-                   <button class="dropdown-btn">Java Output
+                   <li><button class="dropdown-btn">Java Output
                      <i class="fa fa-caret-down"></i>
-                   </button>
+                   </button></li>
                    <div class="dropdown-container">
                     <a href="#">Print Text</a>
                     <a href="#">Print Numbers</a>
