--- a/Tutorial.html
+++ b/Tutorial.html
@@ -37,8 +37,8 @@
                      <i class="fa fa-caret-down"></i>
                    </button></li>
                    <div class="dropdown-container">
-                    <a href="#">Print Text</a>
-                    <a href="#">Print Numbers</a>
+                    <a href="#print-text">Print Text</a>
+                    <a href="#print-number">Print Numbers</a>
                     
                    </div>
                 </ul>
