--- a/Tutorial.html
+++ b/Tutorial.html
@@ -21,7 +21,7 @@
         <main>
             <div class="top">
                 <ul>
-                  <li><a href="tutorial.html">Tutorial</a></li>
+                  <li><a href="Tutorial.html">Tutorial</a></li>
                   <li><a href="Compiler.html">Compiler</a></li>
                   <li><a href="Quiz.html">Quiz</a></li>
                 </ul>
