--- a/Tutorial.html
+++ b/Tutorial.html
@@ -128,6 +128,8 @@
               <p><span style="color: red;">System</span> is a built-in Java class that contains useful members, such as <span style="color: red;">out</span>, which is short for "output". The <span style="color: red;">println()</span> method, short for "print line", is used to print a value to the screen (or a file).</p><br>
               <p>Don't worry too much about <span style="color: red;">System</span>, <span style="color: red;">out</span> and <span style="color: red;">println()</span>. Just know that you need them together to print stuff to the screen.</p><br>
               <p>You should also note that each code statement must end with a semicolon (<span style="color: red;">;</span>).</p>
+              <h2>Print Text</h2>
+              <p>You learned from the previous chapter that you can use the(>span style="color: red;">println()</span>) method to output values or print text in Java: </p>
             </div>
         </main>
         <footer>
