--- a/Tutorial.html
+++ b/Tutorial.html
@@ -35,7 +35,7 @@
                   <li><a href="#lets-start">Let's Start</a></li>
                   <li><a href="#java-syntax">Java Syntax</a></li>
                    <li><button class="dropdown-btn">Java Output
-                     
+                     <i class="fa fa-caret-down"></i>
                    </button></li>
                    <div class="dropdown-container">
                     <a href="#print-text">Print Text</a>
