--- a/Tutorial.html
+++ b/Tutorial.html
@@ -128,7 +128,7 @@
               <p>Don't worry too much about <span style="color: red;">System</span>, <span style="color: red;">out</span> and <span style="color: red;">println()</span>. Just know that you need them together to print stuff to the screen.</p><br>
               <p>You should also note that each code statement must end with a semicolon (<span style="color: red;">;</span>).</p>
               
-              <h2>Java Output/Print Text</h2>
+              <h2>Java Output/Print Text</h2><br>
               <p>You learned from the previous chapter that you can use the(>span style="color: red;">println()</span>) method to output values or print text in Java: </p>
             </div>
         </main>
