--- a/Tutorial.html
+++ b/Tutorial.html
@@ -29,7 +29,7 @@
               </div><br><br>
               <div class="sidebar">
                 <ul>
-                  <b>CLASSES</b>
+                  <b>CLASSES</b><hr>
                   <li><a href="#java-intro">Java Intro</a></li>
                   <li><a href="#java-install">Java Install</a></li>
                   <li><a href="#lets-start">Let's Start</a></li>
