--- a/Compiler.html
+++ b/Compiler.html
@@ -33,7 +33,7 @@
             </ul>
         </nav>
         <h1>LPL Mastery</h1>
-        <p>Your Ultimate Resource for Java Programming</p>
+        <p>Java programming</p>
     </header>
     <main>
 
