--- a/Tutorial.html
+++ b/Tutorial.html
@@ -119,6 +119,7 @@
               <h3>Example explained</h3><br>
               <p>Every line of code that runs in Java must be inside a class. In our example, we named the class Main. A class should always start with an uppercase first letter. Java is case-sensitive: "MyClass" and "myclass" has different meaning.</p><br>
               <p>The name of the java file must match the class name. When saving the file, save it using the class name and add ".java" to the end of the filename. To run the code like the example above, make sure that Java is properly installed: Go to the <a href="#lets-start">Let's Start</a> for how to install Java.</p><br><br>
+                
               <h2 id="java-syntax">Syntax</h2><br>
               <h2>The main Method</h2><br>
               <p>The <span style="color: red;">main()</span> method is required and you will see it in every Java program:</p><br>
@@ -128,7 +129,7 @@
               <p>Don't worry too much about <span style="color: red;">System</span>, <span style="color: red;">out</span> and <span style="color: red;">println()</span>. Just know that you need them together to print stuff to the screen.</p><br>
               <p>You should also note that each code statement must end with a semicolon (<span style="color: red;">;</span>).</p>
               
-              <h2>Java Output/Print Text</h2><br>
+              <h2 id="print-text">Java Output/Print Text</h2><br>
               <p>You learned from the previous chapter that you can use the(>span style="color: red;">println()</span>) method to output values or print text in Java: </p>
             </div>
         </main>
