--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="About.html">About</a></li>
+                    <li><a href="About.html" target=_blank">About</a></li>
                     <li><a href="Service.html">Services</a></li>
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
