--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="About.html" target=_blank">About</a></li>
+                    <li><a href="About.html">About</a></li>
                     <li><a href="Service.html">Services</a></li>
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
@@ -20,9 +20,9 @@
         <main>
             <div class="top">
                 <ul>
-                  <li><a href="Tutorial.html">Tutorial</a></li>
-                  <li><a href="Compiler.html">Compiler</a></li>
-                  <li><a href="Quiz.html">Quiz</a></li>
+                  <li><a href="Tutorial.html target=_blank"">Tutorial</a></li>
+                  <li><a href="Compiler.html" target=_blank">Compiler</a></li>
+                  <li><a href="Quiz.html target=_blank"">Quiz</a></li>
                 </ul>
               </div>
             <h2>Welcome to LPL Mastery</h2>
