--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main>
             <div class="top">
                 <ul>
-                  <li><a href="Tutorial.html target=_blank"">Tutorial</a></li>
+                  <li><a href="Tutorial.html" target=_blank">Tutorial</a></li>
                   <li><a href="Compiler.html" target=_blank">Compiler</a></li>
                   <li><a href="Quiz.html target=_blank"">Quiz</a></li>
                 </ul>
