--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <ul>
                   <li><a href="Tutorial.html" target=_blank">Tutorial</a></li>
                   <li><a href="Compiler.html" target=_blank">Compiler</a></li>
-                  <li><a href="Quiz.html target=_blank"">Quiz</a></li>
+                  <li><a href="Quiz.html" target=_blank">Quiz</a></li>
                 </ul>
               </div>
             <h2>Welcome to LPL Mastery</h2>
