--- a/Classes.html
+++ b/Classes.html
@@ -4,7 +4,7 @@
         <title>LPL Mastery</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
+    <body style="background-color;green">
         <header>
             <nav>
                 <ul>
