--- a/Service.html
+++ b/Service.html
@@ -10,6 +10,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="About.html">About</a></li>
+                    <li><a href="Service.html">About</a></li>
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
