--- a/About.html
+++ b/About.html
@@ -9,6 +9,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="About.html">About</a></li>
                     <li><a href="Service.html">Services</a></li>
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
