--- a/Quiz.html
+++ b/Quiz.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>LPL Mastery - Java Quiz</title>
+    <title>LPL Mastery - Quiz Time</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
         /* Additional CSS styles specific to the quiz */
