--- a/Classes.html
+++ b/Classes.html
@@ -7,6 +7,7 @@
     #code-input {
       width: 100%;
       height: 200px;
+      fontsize: 20px;
     }
     
     #output {
@@ -15,6 +16,7 @@
       border: 1px solid #ccc;
       padding: 10px;
       overflow: auto;
+      fontsize: 20x;
     }
     
     #compile-btn {
